--- a/senna-project/.gitignore
+++ b/senna-project/.gitignore
@@ -50,3 +50,8 @@ temp/
 # IDEs e editores
 .vscode/
 .idea/
+
+
+# EXCEÇÃO: permitir os fluxos do n8n exportados manualmente
+!n8n-flows/*.json
+!senna-project/n8n-flows/*.json
