--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,31 @@
-blinker==1.9.0
-click==8.2.1
-Deprecated==1.2.18
+# Web API
 Flask==3.1.1
+Werkzeug==3.1.3
+click==8.2.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
-lxml==6.0.0
 MarkupSafe==3.0.2
-numpy==2.3.1
-packaging==25.0
-pandas==2.3.0
-pdf2image==1.17.0
+blinker==1.9.0
+
+# Manipulação de PDF e OCR
 pikepdf==9.9.0
-pillow==11.2.1
 PyPDF2==3.0.1
+pdf2image==1.17.0
 pytesseract==0.3.13
+pillow==11.2.1
+lxml==6.0.0
+
+# Data Science y analisis 
+pandas==2.3.0
+numpy==2.3.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
-six==1.17.0
-tqdm==4.67.1
 tzdata==2025.2
+
+# Utils
+tqdm==4.67.1
 Unidecode==1.4.0
-Werkzeug==3.1.3
-wrapt==1.17.2
+
+# Removidos:
+# Deprecated==1.2.18
+# wrapt==1.17.2
