--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 services:
   n8n:
     image: n8nio/n8n:1.97.1
@@ -22,19 +20,19 @@ services:
 
   senna_project:
     build:
-      context: ./senna-project
+      context: .
       dockerfile: Dockerfile
     container_name: senna_project
     ports:
       - "5001:5001"
     volumes:
-      - ./senna-project:/app/senna_project
+      - ./src:/app/src
       - ./maps:/app/maps
       - ./logs:/app/logs
       - ./customers:/app/customers
     environment:
       - PYTHONUNBUFFERED=1
-      - PYTHONPATH=/app/senna_project/src
+      - PYTHONPATH=/app/src
     networks:
       - senna_net
 
