--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,48 @@
-# Web API
-Flask==3.1.1
-Werkzeug==3.1.3
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==6.1.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
 click==8.2.1
+Deprecated==1.2.18
+Flask==3.1.1
+gitdb==4.0.12
+GitPython==3.1.45
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
-MarkupSafe==3.0.2
-blinker==1.9.0
-
-# Manipulação de PDF e OCR
-pikepdf==9.9.0
-PyPDF2==3.0.1
-pdf2image==1.17.0
-pytesseract==0.3.13
-pillow==11.2.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
 lxml==6.0.0
-
-# Data Science y analisis 
-pandas==2.3.0
+MarkupSafe==3.0.2
+narwhals==2.1.2
 numpy==2.3.1
+packaging==25.0
+pandas==2.3.0
+pdf2image==1.17.0
+pikepdf==9.9.0
+pillow==11.2.1
+protobuf==6.32.0
+pyarrow==21.0.0
+pydeck==0.9.1
+PyPDF2==3.0.1
+pytesseract==0.3.13
 python-dateutil==2.9.0.post0
 pytz==2025.2
-tzdata==2025.2
-
-# Utils
+referencing==0.36.2
+requests==2.32.5
+rpds-py==0.27.0
+six==1.17.0
+smmap==5.0.2
+streamlit==1.48.1
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.2
 tqdm==4.67.1
+typing_extensions==4.14.1
+tzdata==2025.2
 Unidecode==1.4.0
-
-# Removidos:
-# Deprecated==1.2.18
-# wrapt==1.17.2
+urllib3==2.5.0
+Werkzeug==3.1.3
+wrapt==1.17.3
