Alterar docker, d-compose e streamlit com novos diretorios de pastas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ version: "3.7"
 services:
   n8n:
     image: n8nio/n8n:1.97.1
+    container_name: n8n
     ports:
-      - 5678:5678
+      - "5678:5678"
     environment:
       - N8N_DEPLOYMENT_TYPE=${N8N_DEPLOYMENT_TYPE}
       - N8N_DIAGNOSTICS_ENABLED=${N8N_DIAGNOSTICS_ENABLED}
@@ -17,24 +18,27 @@ services:
       - N8N_SECURE_COOKIE=${N8N_SECURE_COOKIE}
     volumes:
       - n8n_data:/home/node/.n8n
+    restart: unless-stopped
     networks:
       - senna_net
 
   senna_project:
     build:
-      context: ./senna-project
-      dockerfile: Dockerfile
+      context: .                          # contexto = raiz do repo
+      dockerfile: senna-project/Dockerfile
+    image: senna_project:latest
     container_name: senna_project
     ports:
       - "5001:5001"
+    # Monte APENAS os diretórios de dados no caminho correto do projeto dentro do container
     volumes:
-      - ./senna-project:/app/senna_project
-      - ./maps:/app/maps
-      - ./logs:/app/logs
-      - ./customers:/app/customers
+      - ./senna-project/maps:/app/senna-project/maps
+      - ./senna-project/logs:/app/senna-project/logs
+      - ./senna-project/customers:/app/senna-project/customers
     environment:
       - PYTHONUNBUFFERED=1
-      - PYTHONPATH=/app/senna_project/src
+      # Não sobrescreva PYTHONPATH aqui (já setado no Dockerfile para /app/senna-project)
+    restart: unless-stopped
     networks:
       - senna_net
 
